# nadlan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-rate.yml
deliverables/: real_estate_calc.xlsx
docs/: index.html  rate.json
scripts/: README_rate.md  market.py  update_rate.py
src/realestate/: __init__.py  config.py  finance.py  nadlan.py  parser.py  tax.py
tests/: test_features.py  test_finance.py  test_tax.py
web/: index.html  rate.json
